Added build output ignore patterns

--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -8,9 +8,9 @@
       logLevel="4" traceAndDebug="false" autoAnswer="true" autoConference="false"
       maxCalls="5">
     <accounts>
-      <account accountId="sip:1000@66.240.170.79:5080" registrarUri="sip:66.240.170.79:5080"
+      <!--<account accountId="sip:1000@66.240.170.79:5080" registrarUri="sip:66.240.170.79:5080"
           userName="1000" password="1234" realm="*" isDefault="true"
-          publishPresence="false" />
+          publishPresence="false" />-->
     </accounts>
     <sipTransport type="udp" Port="5060" />
     <networkSettings natInSDP="true" forceLooseRoute="false">
