--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,8 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+SolutionVersion.cs
+build_output/*
+code_drop/*
+lib/MoMA/Reports/submit.xml
+lib/MoMA/Reports/submit.xml
