--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -25,7 +25,7 @@
 
   <!-- FRAMEWORKS -->
   <!-- microsoft.framework: vb6, net-1.0, net-1.1, net-2.0, net-3.5, net-4.0, netcf-1.0, netcf-2.0, silverlight-2.0, mono-1.0, mono-2.0, mono-3.5, moonlight-2.0 (Enter multiple ones with a "," to take advantage of multitargeting) -->
-  <property name="microsoft.framework" value="net-3.5" overwrite="false" />
+  <property name="microsoft.framework" value="net-3.5" overwrite="false" /><!--,net-4.0,mono-3.5-->
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
   <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
@@ -37,10 +37,10 @@
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
   
   <!-- ASSEMBLY VARIABLES -->
-  <property name="version.use_semanticversioning" value="false" overwrite="false" />
+  <property name="version.use_semanticversioning" value="true" overwrite="false" />
   <property name="version.major" value="0" overwrite="false" />
-  <property name="version.minor" value="1" overwrite="false" />
-  <property name="version.patch" value="0" overwrite="false" />
+  <property name="version.minor" value="2" overwrite="false" />
+  <!-- <property name="version.patch" value="0" overwrite="false" /> -->
   <property name="version.gem.suffix" value="" overwrite="false" />
   <property name="use.gem.build_date" value="false" overwrite="false" />
   <property name="assembly.description" value="${project.name} is a product of ${company.name} - ${repository.path}." overwrite="false" />
