--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -1,57 +1,54 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821" />
+    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
   </configSections>
-  <sipua srtp="Disabled" secureSignaling="0" logMessages="true"
-      logLevel="4" traceAndDebug="false" autoAnswer="true" autoConference="false"
-      maxCalls="5">
+  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="4" traceAndDebug="false" autoAnswer="true" autoConference="false" maxCalls="5">
     <accounts>
       <!--<account accountId="sip:1000@66.240.170.79:5080" registrarUri="sip:66.240.170.79:5080"
           userName="1000" password="1234" realm="*" isDefault="true"
           publishPresence="false" />-->
     </accounts>
-    <sipTransport type="udp" Port="5060" />
+    <sipTransport type="udp" Port="5060"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
-      <stun address="" />
-      <turn enabled="false" server="" type="udp" userName="" password=""
-          realm="" />
-      <ice enabled="false" noRTCP="false" />
+      <stun address=""/>
+      <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
+      <ice enabled="false" noRTCP="false"/>
     </networkSettings>
-    <media isVADEnabled="true" captureDeviceId="0" playbackDeviceId="2" />
+    <media isVADEnabled="true" captureDeviceId="0" playbackDeviceId="2"/>
   </sipua>
   <log4net>
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
       <mapping>
-        <level value="ERROR" />
-        <foreColor value="White" />
-        <backColor value="Red, HighIntensity" />
+        <level value="ERROR"/>
+        <foreColor value="White"/>
+        <backColor value="Red, HighIntensity"/>
       </mapping>
       <mapping>
-        <level value="INFO" />
-        <backColor value="Green" />
+        <level value="INFO"/>
+        <backColor value="Green"/>
       </mapping>
       <mapping>
-        <level value="WARN" />
-        <backColor value="Yellow" />
+        <level value="WARN"/>
+        <backColor value="Yellow"/>
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
       </layout>
     </appender>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="siptrace.txt" />
-      <appendToFile value="true" />
+      <file value="siptrace.txt"/>
+      <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
       </layout>
     </appender>
 
     <root>
-      <level value="DEBUG" />
-      <appender-ref ref="ColoredConsoleAppender" />
-      <appender-ref ref="FileAppender" />
+      <level value="DEBUG"/>
+      <appender-ref ref="ColoredConsoleAppender"/>
+      <appender-ref ref="FileAppender"/>
     </root>
   </log4net>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
