--- a/Tests/Integration/pjsip4net.Console/pjsip4net.Console.csproj
+++ b/Tests/Integration/pjsip4net.Console/pjsip4net.Console.csproj
@@ -87,6 +87,7 @@
     <Compile Include="CommandFactory.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="ICommandFactory.cs" />
+    <Compile Include="PrintUsageCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="TestArguments.cs" />
   </ItemGroup>
