--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -16,7 +16,7 @@
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
       <ice enabled="false" noRTCP="false"/>
     </networkSettings>
-    <media isVADEnabled="true" captureDeviceId="0" playbackDeviceId="2"/>
+    <media isVADEnabled="true"/>
   </sipua>
   <log4net>
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
