--- a/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
+++ b/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Accounts\given_a_registeredState.cs" />
     <Compile Include="Accounts\given_a_registeringState.cs" />
     <Compile Include="Accounts\given_a_timedoutState.cs" />
+    <Compile Include="Calls\given_a_call.cs" />
     <Compile Include="Calls\given_a_callingInviteState.cs" />
     <Compile Include="Calls\given_a_nullInviteState.cs" />
     <Compile Include="_base.cs" />
