Dynamic API wrapper library feature implemented. #6

--- a/pjsip4net.Core/pjsip4net.Core.csproj
+++ b/pjsip4net.Core/pjsip4net.Core.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Interfaces\ApiProviders\ITransportApiProvider.cs" />
     <Compile Include="Interfaces\IConfigurationContext.cs" />
     <Compile Include="Interfaces\IConfigurationProvider.cs" />
+    <Compile Include="Interfaces\IConfigureApi.cs" />
     <Compile Include="Interfaces\IConfigureComponents.cs" />
     <Compile Include="Interfaces\IContainer.cs" />
     <Compile Include="Interfaces\IIdentifiable.cs" />
