--- a/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
+++ b/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
@@ -138,10 +138,6 @@
     <Compile Include="given_a_sip_uri_parser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\pjsip.Interop\pjsip.Interop.csproj">
-      <Project>{0AEA8B23-5E46-4923-81B5-7755BA914750}</Project>
-      <Name>pjsip.Interop</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\pjsip4net.Container.Castle\pjsip4net.Container.Castle.csproj">
       <Project>{3502E166-26B1-4A7B-AB50-5CC8BAF0019E}</Project>
       <Name>pjsip4net.Container.Castle</Name>
@@ -176,6 +172,12 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\pjsip4net.Testing\bin\Debug\pjsip4net.Testing.dll">
+      <Link>pjsip4net.Testing.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
