refactored logging initaillization code.
logging is to be confogured explicitly by means of .config file.

--- a/pjsip4net/pjsip4net.csproj
+++ b/pjsip4net/pjsip4net.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Interfaces\IVoIPTransportFactory.cs" />
     <Compile Include="Interfaces\IWavPlayer.cs" />
     <Compile Include="LogEventArgs.cs" />
+    <Compile Include="Logging.cs" />
     <Compile Include="Media\DefaultConferenceBridge.cs" />
     <Compile Include="Interfaces\IMediaManager.cs" />
     <Compile Include="Media\DefaultMediaManager.cs" />
