--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -2,9 +2,12 @@
 <configuration>
   <configSections>
     <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null"/>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
   </configSections>
-  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="5" traceAndDebug="false" autoAnswer="true" autoConference="false" maxCalls="5">
+  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="6" traceAndDebug="false" autoAnswer="true" autoConference="false" maxCalls="5">
     <accounts>
       <!--<account accountId="sip:1000@66.240.xxx.xx:5080" registrarUri="sip:66.240.170.79:5080"
           userName="1000" password="1234" realm="*" isDefault="true"
@@ -12,12 +15,22 @@
     </accounts>
     <sipTransport type="udp" Port="5060"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
-      <stun address=""/>
+      <stun address="stun01.sipphone.com"/>
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
       <ice enabled="false" noRTCP="false"/>
+      <proxies>
+		    <add address="sip:proxy.sipthor.net"/>
+	    </proxies>
     </networkSettings>
     <media isVADEnabled="true"/>
   </sipua>
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net">
+        <arg key="configType" value="EXTERNAL" />
+      </factoryAdapter>  
+    </logging>
+  </common>
   <log4net>
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
       <mapping>
@@ -34,14 +47,14 @@
         <backColor value="Yellow"/>
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
+        <conversionPattern value="%date [%thread] %-5level - %message%newline"/>
       </layout>
     </appender>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
       <file value="siptrace.txt"/>
       <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
+        <conversionPattern value="%date [%thread] %-5level - %message%newline"/>
       </layout>
     </appender>
 
