Fast public STUN server in config by default

--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -7,7 +7,7 @@
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
   </configSections>
-  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="6" traceAndDebug="false" autoAnswer="true" autoConference="false" maxCalls="5">
+  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="5" traceAndDebug="false" autoAnswer="true" autoConference="false" maxCalls="5">
     <accounts>
       <!--<account accountId="sip:1000@66.240.xxx.xx:5080" registrarUri="sip:66.240.170.79:5080"
           userName="1000" password="1234" realm="*" isDefault="true"
@@ -15,12 +15,9 @@
     </accounts>
     <sipTransport type="udp" Port="5060"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
-      <stun address="stun01.sipphone.com"/>
+      <stun address="stun.stunprotocol.org"/>
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
       <ice enabled="false" noRTCP="false"/>
-      <proxies>
-		    <add address="sip:proxy.sipthor.net"/>
-	    </proxies>
     </networkSettings>
     <media isVADEnabled="true"/>
   </sipua>
