ICE enabled by deafult

--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -17,7 +17,7 @@
     <networkSettings natInSDP="true" forceLooseRoute="false">
       <stun address="stun.stunprotocol.org"/>
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
-      <ice enabled="false" noRTCP="false"/>
+      <ice enabled="true" noRTCP="false"/>
     </networkSettings>
     <media isVADEnabled="true"/>
   </sipua>
