An example of STUN server configuration commented in .config file

--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -15,9 +15,12 @@
     </accounts>
     <sipTransport type="udp" Port="5060"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
-      <stun address="stun.stunprotocol.org"/>
+      <!--<stun address="stun.stunprotocol.org"/>-->
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
       <ice enabled="true" noRTCP="false"/>
+      <!--<proxies>
+        <add address="sip:proxy.sipthor.net"/>
+      </proxies>-->
     </networkSettings>
     <media isVADEnabled="true"/>
   </sipua>
