Got rid of nasty Castle container commision concern running BeginInit when nobody asked it to.
As a price to pay - I had to remove BCL standard interface ISupportInitialize from Initializable.
Added service type forwarding feature to common container interface.

--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -15,7 +15,7 @@
     </accounts>
     <sipTransport type="udp" Port="5060"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
-      <!--<stun address="stun.stunprotocol.org"/>-->
+      <stun address="stun.stunprotocol.org"/>
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
       <ice enabled="true" noRTCP="false"/>
       <!--<proxies>
