--- a/pjsip4net.Container.Castle/pjsip4net.Container.Castle.csproj
+++ b/pjsip4net.Container.Castle/pjsip4net.Container.Castle.csproj
@@ -90,7 +90,7 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
-    <Compile Include="CastleContainer.cs" />
+    <Compile Include="CastleContainerAdapter.cs" />
     <Compile Include="ConfigureCastleContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
