Renaming invite session to signalling session.
Clean up.

--- a/pjsip4net/pjsip4net.csproj
+++ b/pjsip4net/pjsip4net.csproj
@@ -136,7 +136,7 @@
     <Compile Include="Interfaces\ICall.cs" />
     <Compile Include="Interfaces\ICallManager.cs" />
     <Compile Include="Calls\IncomingCallEventArgs.cs" />
-    <Compile Include="Calls\InviteSession.cs" />
+    <Compile Include="Calls\SignallingSession.cs" />
     <Compile Include="Calls\DisconnectedInviteState.cs" />
     <Compile Include="Calls\MediaSession.cs" />
     <Compile Include="Calls\ConferenceMediaStateDecorator.cs" />
