--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -15,9 +15,9 @@
     </accounts>
     <sipTransport type="udp" Port="5060"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
-      <stun address="stun.stunprotocol.org"/>
+      <!--<stun address="stun.stunprotocol.org"/>-->
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
-      <ice enabled="true" noRTCP="false"/>
+      <ice enabled="false" noRTCP="false"/>
       <!--<proxies>
         <add address="sip:proxy.sipthor.net"/>
       </proxies>-->
@@ -28,7 +28,7 @@
     <logging>
       <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net">
         <arg key="configType" value="EXTERNAL" />
-      </factoryAdapter>  
+      </factoryAdapter>
     </logging>
   </common>
   <log4net>
@@ -64,4 +64,7 @@
       <appender-ref ref="FileAppender"/>
     </root>
   </log4net>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
