--- a/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
+++ b/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
@@ -179,13 +179,11 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\pjsip4net.Testing\bin\Debug\pjsip4net.Testing.dll">
-      <Link>pjsip4net.Testing.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
