--- a/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
+++ b/Tests/Unit/pjsip4net.Tests/pjsip4net.Tests.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Calls\given_a_call.cs" />
     <Compile Include="Calls\given_a_callingInviteState.cs" />
     <Compile Include="Calls\given_a_nullInviteState.cs" />
+    <Compile Include="Media\given_a_call_to_be_recorded.cs" />
     <Compile Include="_base.cs" />
     <Compile Include="given_a_sip_ua.cs" />
     <Compile Include="given_a_valueWrapper.cs" />
