WavPlayer reports end of file in non-looped mode.
Close #19

--- a/Tests/Integration/pjsip4net.Console/pjsip4net.Console.csproj
+++ b/Tests/Integration/pjsip4net.Console/pjsip4net.Console.csproj
@@ -173,6 +173,11 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NeroSoundTrax_test8_PCM_Mono_VBR_16SS_48000Hz.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
