--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -7,13 +7,13 @@
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
   </configSections>
-  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="5" traceAndDebug="false" autoAnswer="true" autoConference="false" maxCalls="5">
+  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="5" traceAndDebug="false" autoAnswer="true" autoRecording="true" autoConference="false" maxCalls="5">
     <accounts>
-      <!--<account accountId="sip:1000@66.240.xxx.xx:5080" registrarUri="sip:66.240.170.79:5080"
+      <!--<account accountId="sip:1000@66.240.xxx.xx:5080" registrarUri="sip:66.240.xx.xx:5080"
           userName="1000" password="1234" realm="*" isDefault="true"
           publishPresence="false" />-->
     </accounts>
-    <sipTransport type="udp" Port="5060"/>
+    <sipTransport type="udp" Port="5080"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
       <!--<stun address="stun.stunprotocol.org"/>-->
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
@@ -22,7 +22,7 @@
         <add address="sip:proxy.sipthor.net"/>
       </proxies>-->
     </networkSettings>
-    <media isVADEnabled="true"/>
+    <media isVADEnabled="true" playbackDeviceId="9" captureDeviceId="6"/>
   </sipua>
   <common>
     <logging>
