--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -1,17 +1,45 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null"/>
+    <section 
+      name="sipua"
+      type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null"
+      />
+    
+    
+    
+    
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
   </configSections>
-  <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="5" traceAndDebug="false" autoAnswer="true" autoRecording="true" autoConference="false" maxCalls="5">
+  
+  
+  
+  
+  <sipua 
+    srtp="Disabled" 
+    secureSignaling="0" 
+    logMessages="true" 
+    logLevel="5" 
+    traceAndDebug="false" 
+    autoAnswer="true" 
+    autoRecording="true" 
+    autoConference="false" maxCalls="5">
     <accounts>
       <!--<account accountId="sip:1000@66.240.xxx.xx:5080" registrarUri="sip:66.240.xx.xx:5080"
           userName="1000" password="1234" realm="*" isDefault="true"
           publishPresence="false" />-->
+      <account accountId="sip:1000@10.2.2.106:5080" registrarUri="sip:10.2.2.106:5080"
+          userName="1000" password="1234" realm="10.2.2.106" isDefault="true"
+          publishPresence="true" />
+
+      <!--register -e:1000 -d:10.2.2.106 -p:1234 -Port:5060 -t:udp-->
+
+
+
+
     </accounts>
     <sipTransport type="udp" Port="5080"/>
     <networkSettings natInSDP="true" forceLooseRoute="false">
@@ -24,6 +52,12 @@
     </networkSettings>
     <media isVADEnabled="true" playbackDeviceId="9" captureDeviceId="6"/>
   </sipua>
+  
+  
+  
+  
+  
+  
   <common>
     <logging>
       <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net">
