--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -6,7 +6,7 @@
   <!-- Required Items -->
   <property name="project.name" value="pjsip4net" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
-  <property name="repository.path" value="https://github.com/siniypin/pjsip4net" overwrite="false" />
+  <property name="repository.path" value="https://github.com/amccool/pjsip4net" overwrite="false" />
   <property name="company.name" value="Robert T" overwrite="false" />
 
   <!-- folders -->
