change to native references

--- a/nuget/pjsip4net.0.0.2.nuspec
+++ b/nuget/pjsip4net.0.0.2.nuspec
@@ -2,12 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>pjsip4net</id>
-        <version>1.0.0</version>
+        <version>0.0.2</version>
         <authors>RobertT</authors>
         <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>A pjsip (http://www.pjsip.org/) user agent .Net wrapper.
 pjsip4net is a projection of procedural pjsua high level API into convenient and easy to use OOP form.</description>
+        <summary>pjsip4net</summary>
         <releaseNotes>Copyright pjsip4net Boris Tveritnev.
 
 Currently only old 1.x branch version is supported. The code is distributed with custom built pjsip 1.4 dll file. No other versions were tested, however one can develop its own interop code version and plug it into the application. If you do, please, send me a pull request.</releaseNotes>
@@ -23,16 +24,16 @@ Currently only old 1.x branch version is supported. The code is distributed with
         </dependencies>
     </metadata>
     <files>
-        <file src="..\pjsip.Interop\bin\Release\libeay32.dll" target="lib\net40\libeay32.dll" />
-        <file src="..\pjsip.Interop\bin\Release\ssleay32.dll" target="lib\net40\ssleay32.dll" />
-        <file src="..\pjsip.Interop\bin\Release\pjsua.dll" target="lib\net40\pjsua.dll" />
-        <file src="..\pjsip4net\bin\Release\pjsip4net.pdb" target="lib\net40\pjsip4net.pdb" />
-        <file src="..\pjsip4net.Container.Castle\bin\Release\pjsip4net.Container.Castle.pdb" target="lib\net40\pjsip4net.Container.Castle.pdb" />
-        <file src="..\pjsip.Interop\bin\Release\pjsip4net.Core.pdb" target="lib\net40\pjsip4net.Core.pdb" />
-        <file src="..\pjsip4net\bin\Release\pjsip4net.dll" target="lib\net40\pjsip4net.dll" />
-        <file src="..\pjsip.Interop\bin\Release\pjsip4net.Core.dll" target="lib\net40\pjsip4net.Core.dll" />
-        <file src="..\pjsip4net.Container.Castle\bin\Release\pjsip4net.Container.Castle.dll" target="lib\net40\pjsip4net.Container.Castle.dll" />
-        <file src="..\pjsip.Interop\bin\Release\pjsip.Interop.pdb" target="lib\net40\pjsip.Interop.pdb" />
-        <file src="..\pjsip.Interop\bin\Release\pjsip.Interop.dll" target="lib\net40\pjsip.Interop.dll" />
+        <file src="lib\native\libeay32.dll" target="lib\native\libeay32.dll" />
+        <file src="lib\native\pjsua.dll" target="lib\native\pjsua.dll" />
+        <file src="lib\native\ssleay32.dll" target="lib\native\ssleay32.dll" />
+        <file src="lib\net40\pjsip.Interop.dll" target="lib\net40\pjsip.Interop.dll" />
+        <file src="lib\net40\pjsip.Interop.pdb" target="lib\net40\pjsip.Interop.pdb" />
+        <file src="lib\net40\pjsip4net.Container.Castle.dll" target="lib\net40\pjsip4net.Container.Castle.dll" />
+        <file src="lib\net40\pjsip4net.Container.Castle.pdb" target="lib\net40\pjsip4net.Container.Castle.pdb" />
+        <file src="lib\net40\pjsip4net.Core.dll" target="lib\net40\pjsip4net.Core.dll" />
+        <file src="lib\net40\pjsip4net.Core.pdb" target="lib\net40\pjsip4net.Core.pdb" />
+        <file src="lib\net40\pjsip4net.dll" target="lib\net40\pjsip4net.dll" />
+        <file src="lib\net40\pjsip4net.pdb" target="lib\net40\pjsip4net.pdb" />
     </files>
 </package>
