allow for random port assignment

--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -41,7 +41,10 @@
 
 
     </accounts>
-    <sipTransport type="udp" Port="5080"/>
+    <sipTransport 
+      type="udp" 
+      port="0"
+      />
     <networkSettings natInSDP="true" forceLooseRoute="false">
       <!--<stun address="stun.stunprotocol.org"/>-->
       <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
