port 0 for randomize

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -40,9 +40,9 @@
   <property name="version.use_semanticversioning" value="true" overwrite="false" />
   <property name="version.major" value="0" overwrite="false" />
   <property name="version.minor" value="2" overwrite="false" />
-  <property name="version.patch" value="1" overwrite="false" />
-  <!--<property name="version.build" value="0" />
-  <property name="version.revision" value="0" />-->
+  <property name="version.patch" value="2" overwrite="true" />
+  <property name="version.build" value="2" overwrite="false" />
+  <property name="version.revision" value="1" overwrite="true" />
   
   
   
