--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -7,7 +7,7 @@
   <property name="project.name" value="pjsip4net" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
   <property name="repository.path" value="https://github.com/siniypin/pjsip4net" overwrite="false" />
-  <property name="company.name" value="Robert T" overwrite="false" />
+  <property name="company.name" value="Boris Tveritnev" overwrite="false" />
 
   <!-- folders -->
   <property name="folder.database" value="${project.name}.Database" overwrite="false" />
