--- a/RB/MultiRinger/App.config
+++ b/RB/MultiRinger/App.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null" />
+    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net" />
 
-
+    <sectionGroup name="couchbaseClients">
+      <section name="couchbase" type="Couchbase.Configuration.Client.Providers.CouchbaseClientSection, Couchbase.NetClient" />
+    </sectionGroup>
 
 
     <sectionGroup name="common">
@@ -11,6 +13,26 @@
     </sectionGroup>
     <!--<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>-->
   </configSections>
+
+  <couchbaseClients>
+    <couchbase useSsl="false">
+      <servers>
+        <add uri="http://127.1.1.1:8091/pools" />
+        <add uri="http://127.1.1.2:8091/pools" />
+        <add uri="http://127.1.2.1:8091/pools" />
+        <add uri="http://127.1.1.3:8091/pools" />
+        <add uri="http://127.1.3.1:8091/pools" />
+        <!--<add uri="http://192.168.56.102:8091/pools"></add>
+        <add uri="http://192.168.56.103:8091/pools"></add>
+        <add uri="http://192.168.56.104:8091/pools"></add>-->
+      </servers>
+      <buckets>
+        <add name="default" useSsl="false" password="" operationLifespan="2000">
+          <connectionPool name="custom" maxSize="10" minSize="5" sendTimeout="12000"></connectionPool>
+        </add>
+      </buckets>
+    </couchbase>
+  </couchbaseClients>
 
 
 
@@ -57,9 +79,6 @@
 
   <common>
     <logging>
-      <!--<factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net">
-        <arg key="configType" value="EXTERNAL" />
-      </factoryAdapter>-->
       <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
         <arg key="level" value="ALL" />
         <arg key="showLogName" value="true" />
@@ -83,45 +102,17 @@
         </listeners>
       </source>
     </sources>
+    <trace>
+      <listeners>
+        <add name="color" />
+      </listeners>
+    </trace>
     <sharedListeners>
       <add name="color" type="Essential.Diagnostics.ColoredConsoleTraceListener, Essential.Diagnostics" template="{DateTime:HH':'mm':'ssZ} [{Thread}] {EventType} {Source} {Id}: {Message}{Data}" convertWriteToEvent="true" />
     </sharedListeners>
   </system.diagnostics>
 
 
-  <!--<log4net>
-    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-      <mapping>
-        <level value="ERROR"/>
-        <foreColor value="White"/>
-        <backColor value="Red, HighIntensity"/>
-      </mapping>
-      <mapping>
-        <level value="INFO"/>
-        <backColor value="Green"/>
-      </mapping>
-      <mapping>
-        <level value="WARN"/>
-        <backColor value="Yellow"/>
-      </mapping>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline"/>
-      </layout>
-    </appender>
-    <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="siptrace.txt"/>
-      <appendToFile value="true"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline"/>
-      </layout>
-    </appender>
-
-    <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="ColoredConsoleAppender"/>
-      <appender-ref ref="FileAppender"/>
-    </root>
-  </log4net>-->
 
 
 
@@ -136,6 +127,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Core" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
